--- a/ProductReviewManagementLinq/ProductReviewManagementLinq.csproj
+++ b/ProductReviewManagementLinq/ProductReviewManagementLinq.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ProductReview.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReviewTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
